--- a/中转站/624LD/index.html
+++ b/中转站/624LD/index.html
@@ -69,12 +69,15 @@
 
       </div>
     </a>
-    <div class="yh">
+    <!-- <div class="yh">
 
-    </div>
+    </div> -->
   </div>
 </body>
+<script src="https://talk8.cc/index/index/chatBoxJs/u/60d44d0c7d6b8?pc=ld_pc.png"></script>
+<script>whisperChat.init();</script>
 <script>
+  
   function alertbox() {
     alert("即将上架，敬请期待")
   }
