--- a/中转站/624LD/web.html
+++ b/中转站/624LD/web.html
@@ -9,41 +9,68 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <style>
     .h5 {
-      background-image: url('./image/h5/bg.jpg');
-      height: 40.1rem;
+      background-image: url('./image/h5/bg1.jpg');
       background-size: 100%;
       background-repeat: no-repeat;
+      height: 30.08rem;
+      position: relative;
+    }
+    .gotolink{
+      position: absolute;
+      background-image: url('./image/h5/btn-1-1@2x.png');
+      background-size: 100%;
+      background-repeat: no-repeat;
+      width: 4.25rem;
+      height: 0.9rem;
+      right: 0;
+      left: 0;
+      margin: auto;
+      top: 10.12rem;
+    }
+
+    .gotoh52{
+      position: absolute;
+      background-image: url('./image/h5/btn-2-1@2x.png');
+      background-size: 100%;
+      background-repeat: no-repeat;
+      width: 4.25rem;
+      height: 0.9rem;
+      right: 0;
+      left: 0;
+      margin: auto;
+      top: 11.47rem;
+    }
+ 
+    .kflx{
+      background-size: 100%;
+      background-repeat: no-repeat;
+      position: absolute;
+      background-image: url('./image/h5/service-1@2x.png');
+      width: 2.82rem;
+      height: 0.88rem;
+      right: 0.06rem;
+      top: 8.87rem;
     }
   </style>
 </head>
 
 <body>
   <div class="h5">
+    <a href="">
+      <div class="gotolink">
+        
+      </div>
+    </a>
+    <a href="./web2.html">
+      <div class="gotoh52">
 
+      </div>
+    </a>
+  
   </div>
 </body>
-<script>
-  function alertbox() {
-    alert("即将上架，敬请期待")
-  }
-  var u = navigator.userAgent;
-
-  var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1; //android终端
-
-  var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
-  function test() {
-    if (isAndroid == true) {
-      $(".btn_box1").show()
-      $(".btn_box").hide()
-      $("#qrimg").attr("src", "./image/and.jpeg")
-    } else {
-      $(".btn_box1").hide()
-      $(".btn_box").show()
-      $("#qrimg").attr("src", "./image/ll.jpeg")
-    }
-  }
-  test()
-</script>
+<script src="https://talk8.cc/index/index/chatBoxJs/u/60d44d0c7d6b8?h5=ld_h5.png"></script>
+<script>whisperChat.init();</script>
 <script>
   window.onresize = function () {
     init()
